[tool.poetry]
name = "apistar-pagination"
version = "0.3.0"
description = "Pagination tools for API Star."
authors = ["José Antonio Perdiguero López <perdy@perdy.io>"]
license = "GPL-3.0+"
readme = "README.md"
repository = "https://github.com/PeRDy/apistar-pagination"
keywords = ["apistar", "pagination"]

[package]
include = ["apistar_pagination/**/*.py"]

[tool.poetry.dependencies]
python = "^3.5"
apistar = "^0.5.30"

[tool.poetry.dev-dependencies]
pytest = "^3.6"
pytest-xdist = "^1.22"
pytest-cov = "^2.5"
tox = "^3.0"
clinner = "^1.9"
ipython = "^6.4"

[tool.poetry.extras]
sqlalchemy = ["apistar-sqlalchemy"]
